assets/css/style.css
.nav-custom a {
    font-size: 2rem;
}

.list-custom button {
    background-color: lightgray;
}

.today-custom{
    width: 98%;
   
}

.today-custom h5 {
    font-size: 1.8rem;
}

.card-custom {

}

.favorable {
    background-color: green;
}

.moderate {
    background-color: orange;
}

.severe {
    background-color: red;
}

.icon {
    height: 4rem;
}

img {
    padding: 0px;
    margin: 0px;
}

